--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@mui/material": "^5.10.6",
     "@radix-ui/react-icons": "^1.1.1",
     "@tanstack/react-query": "^4.6.0",
+    "@tanstack/react-query-devtools": "^4.7.2",
+    "@types/react-transition-group": "^4.4.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
     "uuid": "^9.0.0",
     "yup": "^0.32.11",
     "zustand": "^4.1.1"
