--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "mock-api": "json-server --watch ./mock-api/index.json"
+    "mock-api": "json-server --watch ./mock-api/index.json",
+    "test:unit": "jest --config jest.config.js"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@types/jest": "^29.1.1",
     "@types/node": "18.7.19",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -44,6 +46,7 @@
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.4",
+    "jest": "^29.1.2",
     "json-server": "^0.17.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
