--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "start": "next start",
     "lint": "next lint",
     "mock-api": "json-server --watch ./mock-api/index.json",
-    "test:unit": "jest --config jest.config.js",
+    "test:unit": "jest --watch",
+    "cypress": "cypress open",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -41,11 +47,16 @@
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^29.1.1",
     "@types/node": "18.7.19",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__react": "^10.2.0",
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
@@ -56,13 +67,17 @@
     "eslint-config-next": "^12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.4",
+    "husky": "^8.0.1",
     "jest": "^29.1.2",
     "json-server": "^0.17.0",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.3",
     "typescript-eslint": "0.0.1-alpha.0"
   }
