--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "next": "12.3.1",
+    "next-i18next": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-transition-group": "^4.4.5",
@@ -72,6 +73,7 @@
     "eslint-plugin-storybook": "^0.6.4",
     "husky": "^8.0.1",
     "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "json-server": "^0.17.0",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
